--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@types/howler": "^2.2.12",
     "typescript": "~5.6.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-html": "^3.2.2"
   },
   "dependencies": {
     "@pencil.js/spritesheet": "^1.5.1",
